app/assets/stylesheets/application.css.scss
//= require reset
//= require_self

@import 'variables';
@import 'mixins';

// Base ----------------------------------------------------------------------
* { box-sizing: border-box }
body { @include vendor-prefixes(user-select, none) }

body, button, input, legend, textarea {
  font-family: 'Open sans', 'sans-serif';
  font-size: $baseFontSize;
  line-height: 1.5;
  color: $mainTextColor;
}

h1, h2, h3, h4, h5, h6 {
  line-height: 1.1;
  font-weight: 400;
  margin: 1em 0;
}

a { color: $blueColor }
a:focus, a:hover { color: lighten($blueColor, 10%) }

// Layout --------------------------------------------------------------------
.wrap {
  width: 78%;
  max-width: 540px;
  margin: auto;
}

// Header --------------------------------------------------------------------
header {
  z-index: 1;
  position: fixed;
  top: 0; left: 2.5%; right: 2.5%;
  font-size: 14px;

  .advanced-menu {
    z-index: 1;
    position: relative;
    border: 6px solid #e1e1e1;
    border-top: 0;
    @include gradient(#fefefe, #fafafa);
    @include vendor-prefixes(transform, translateY(-100%));
  }

  h1 {
    margin: 0;
    padding: 1em 0;
    color: #b3b3b3;
    font-size: 1.4em;
    border-bottom: 1px solid #c4c4c4;
    &:hover { @include vendor-prefixes(user-select, text) }

    .wrap {
      line-height: 1.3;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
    }

    .author { font-weight: bold }
    .title:before { content: '-'; padding: 0 .5em 0 .4em }
  }

  a { color: #838383 }
  a:hover, a:focus { color: inherit }

  ul {
    position: absolute;
    top: 0;
    height: 100%;

    &.left  { left: 0; border-right: 1px solid #c4c4c4 }
    &.right { right: 0; border-left: 1px solid #c4c4c4 }
  }

  .library {
    text-transform: uppercase;
    font-weight: bold;
    border-left: 1px solid #f6f6f6;
  }

  .button-advanced-menus {
    position: absolute;
    top: 24px; right: 0;
    display: block;
    width: 76px; height: 76px;
    background-color: #f9f9f9;
    border-radius: 100%;
    text-align: center;

    &:hover, &:focus { background-color: darken(#f9f9f9, 5%) }

    img { position: relative; top: -2px ;}
    &:before { content: ''; height: 100%; }
    &:before, img {
      display: inline-block;
      vertical-align: middle;
    }
  }
}

header li + li { border-left: 1px solid #c4c4c4 }
header li {
  float: left;
  list-style-type: none;
  height: 100%;

  a {
    display: block;
    height: 100%;
    padding: 0 1.4em;
    border-bottom: 1px solid #c4c4c4;
  }

  a:hover, a:focus { background-color: rgba(#fff, .8) }
  a:before { content: ''; height: 100% }
  a:before, a > span { display: inline-block; vertical-align: middle }

  img { display: block }
}

header li.selected {
  border-left: 0;

  a {
    background-color: $blueColor;
    border-bottom: 1px solid #01b3df;
    @include gradient(#4ddafd, #02c9fb);
  }
  a:hover, a:focus { @include gradient(lighten(#4ddafd, 5%), lighten(#02c9fb, 5%)) }
}

// Advanced Menus ------------------------------------------------------------
.advanced-menu, .button-advanced-menus {
  @include transform-transition(.2s)
}

.show-advanced-menus {
  header:before { height: 200px }
  .advanced-menu { @include vendor-prefixes(transform, translateY(0)) }
  .button-advanced-menus { @include vendor-prefixes(transform, translateY(-25%) scale(0)) }
}

// Main ----------------------------------------------------------------------
[role="main"] {
  margin: 7em 0;
  font-family: Times, serif;
  font-size: 21px;
  line-height: 1.8;
  @include vendor-prefixes(user-select, text);

  h1, h2 { margin: .2em 0 }
  h1 { font-size: 48px }
  h2 { font-size: 32px }
  h3 { margin-top: 2em }

  section { counter-reset: paragraph }

  p { position: relative }
  p:before {
    font-family: 'Open sans', sans-serif;
    display: inline-block;
    width: 10%;
    margin-left: -10%;
    font-size: 14px;
    color: $blueColor;
    counter-increment: paragraph;
    content:"§" counter(paragraph);
  }
}

// Footer --------------------------------------------------------------------
footer {
  position: fixed;
  bottom: 0; left: 0;
  width: 100%;
}

// Header & Footer fadeout ----------------------------------------------------
header:before,
footer:before, {
  z-index: 0;
  content: '';
  display: block;
  position: absolute;
  left: 0;
  width: 100%; height: 100px;
  background-color: transparent !important;
  pointer-events: none;
}

header:before { top: 0; @include gradient(#fff, rgba(#fff, 0)) }
footer:before { bottom: 0; @include gradient(rgba(#fff, 0), #fff) }

// --------------------------------------------------------------------------- 1067px
@media (max-width: 1067px) {
  header .wrap {
    width: 100%;
    max-width: none;
    margin: 0;
    padding: 0 235px 0 230px;
  }
}

